@@ -32,12 +32,25 @@ class GameplayTimer
     int64_t m_cyclesCurrent = 0;
     int64_t m_cyclesTotal = 0;
 
+    bool    m_levelBlinkActive = false;
+    bool    m_worldBlinkActive = false;
+    int     m_blinkEffect = 0;
+    bool    m_allowBlink = false;
+    float   m_blinkingFactor = 0.f;
+    float   m_blinkingDir = 1.0f;
+    float   m_colorSpin[3] = {0.0f, 0.8f, 0.8f};
+    float   m_colorSpinHue = 0.f;
+    void    updateColorSpin(float delta);
+
+    void    updateAllowBlink();
+
     bool    m_semiTransparent = false;
 
 public:
     GameplayTimer();
 
     void setSemitransparent(bool t);
+    void setBlinkEffect(int be);
     bool semitransparent();
 
     void reset();
