@@ -104,6 +104,16 @@ void OpenConfig_preSetup()
         {"smbx13", 2}
     };
 
+    const IniProcessing::StrEnumMap speedRunBlinkMode =
+    {
+        {"undefined", SPEEDRUN_EFFECT_BLINK_UNDEFINED},
+        {"opaque", SPEEDRUN_EFFECT_BLINK_OPAQUEONLY},
+        {"always", SPEEDRUN_EFFECT_BLINK_ALWAYS},
+        {"true", SPEEDRUN_EFFECT_BLINK_ALWAYS},
+        {"never", SPEEDRUN_EFFECT_BLINK_NEVER},
+        {"false", SPEEDRUN_EFFECT_BLINK_NEVER}
+    };
+
     std::string configPath = AppPathManager::settingsFileSTD();
 
     if(Files::fileExists(configPath))
@@ -137,6 +147,7 @@ void OpenConfig_preSetup()
         config.beginGroup("speedrun");
         config.read("mode", g_preSetup.speedRunMode, 0);
         config.read("semi-transparent-timer", g_preSetup.speedRunSemiTransparentTimer, false);
+        config.readEnum("blink-effect", g_preSetup.speedRunEffectBlink, (int)SPEEDRUN_EFFECT_BLINK_UNDEFINED, speedRunBlinkMode);
         config.endGroup();
     }
 }
@@ -312,6 +323,16 @@ void SaveConfig()
     config.beginGroup("speedrun");
     config.setValue("mode", g_preSetup.speedRunMode);
     config.setValue("semi-transparent-timer", g_preSetup.speedRunSemiTransparentTimer);
+    {
+        std::unordered_map<int, std::string>  speedRunBlinkMode =
+        {
+            {SPEEDRUN_EFFECT_BLINK_UNDEFINED, "undefined"},
+            {SPEEDRUN_EFFECT_BLINK_OPAQUEONLY, "opaque"},
+            {SPEEDRUN_EFFECT_BLINK_ALWAYS, "always"},
+            {SPEEDRUN_EFFECT_BLINK_NEVER, "never"}
+        };
+        config.setValue("blink-effect", speedRunBlinkMode[g_preSetup.speedRunEffectBlink]);
+    }
     config.endGroup();
 
     config.beginGroup("effects");
